--- a/templates/home.html
+++ b/templates/home.html
@@ -3,15 +3,150 @@
 {% block content %}
 <div class="content">
   <div class="container-fluid">
-    <h4 class="page-title">Home</h4>
+    <h4 class="page-title">Dashboard</h4>
+
     <div class="row">
-      <div class="col-md-12">
-        <div class="card">
-          <div class="card-header">
-            <div class="card-title">Page Title</div>
-            <div class="card-category">Page Subtitle</div>
+      <div class="col-xl-2 col-lg-3 col-md-6 col-sm-6">
+        <div class="card card-stats card-warning">
+          <div class="card-body">
+            <div class="row">
+              <div class="col-5 col-stats-icon">
+                <div class="icon-big text-center">
+                  <i class="la la-tasks"></i>
+                </div>
+              </div>
+              <div class="col-7">
+                <div class="numbers">
+                  <p class="card-category">Total Tasks</p>
+                  <h4 class="card-title">{{ total_tasks }}</h4>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="card-body">Hello, World</div>
+        </div>
+      </div>
+
+      <!-- Total SubTasks -->
+      <div class="col-xl-2 col-lg-3 col-md-6 col-sm-6">
+        <div class="card card-stats card-success">
+          <div class="card-body">
+            <div class="row">
+              <div class="col-5 col-stats-icon">
+                <div class="icon-big text-center">
+                  <i class="la la-list-ul"></i>
+                </div>
+              </div>
+              <div class="col-7">
+                <div class="numbers">
+                  <p class="card-category">SubTasks</p>
+                  <h4 class="card-title">{{ total_subtasks }}</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Total Notes -->
+      <div class="col-xl-2 col-lg-3 col-md-6 col-sm-6">
+        <div class="card card-stats card-primary">
+          <div class="card-body">
+            <div class="row">
+              <div class="col-5 col-stats-icon">
+                <div class="icon-big text-center">
+                  <i class="la la-sticky-note"></i>
+                </div>
+              </div>
+              <div class="col-7">
+                <div class="numbers">
+                  <p class="card-category">Notes</p>
+                  <h4 class="card-title">{{ total_notes }}</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Categories -->
+      <div class="col-xl-2 col-lg-3 col-md-6 col-sm-6">
+        <div class="card card-stats card-info">
+          <div class="card-body">
+            <div class="row">
+              <div class="col-5 col-stats-icon">
+                <div class="icon-big text-center">
+                  <i class="la la-tags"></i>
+                </div>
+              </div>
+              <div class="col-7">
+                <div class="numbers">
+                  <p class="card-category">Categories</p>
+                  <h4 class="card-title">{{ total_categories }}</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Priorities -->
+      <div class="col-xl-2 col-lg-3 col-md-6 col-sm-6">
+        <div class="card card-stats card-danger">
+          <div class="card-body">
+            <div class="row">
+              <div class="col-5 col-stats-icon">
+                <div class="icon-big text-center">
+                  <i class="la la-flag"></i>
+                </div>
+              </div>
+              <div class="col-7">
+                <div class="numbers">
+                  <p class="card-category">Priorities</p>
+                  <h4 class="card-title">{{ total_priorities }}</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Pending SubTasks -->
+      <div class="col-xl-2 col-lg-3 col-md-6 col-sm-6">
+        <div class="card card-stats card-warning">
+          <div class="card-body">
+            <div class="row">
+              <div class="col-5 col-stats-icon">
+                <div class="icon-big text-center">
+                  <i class="la la-hourglass-half"></i>
+                </div>
+              </div>
+              <div class="col-7">
+                <div class="numbers">
+                  <p class="card-category">Pending SubTasks</p>
+                  <h4 class="card-title">{{ pending_subtasks }}</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Completed Tasks -->
+    <div class="row mt-4">
+      <div class="col-md-12">
+        <div class="card card-stats card-success">
+          <div class="card-body">
+            <div class="d-flex align-items-center justify-content-center" style="min-height: 80px;">
+              <div class="text-center">
+                <div class="icon-big text-center mb-2">
+                  <i class="la la-check-circle"></i>
+                </div>
+                <p class="card-category">Completed Tasks</p>
+                <h4 class="card-title">{{ completed_tasks }}</h4>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
