--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<title>{% block title %} TASKS MANAGEMENT{% endblock %}</title>
+	<title>{% block title %}TASKS MANAGEMENT{% endblock %}</title>
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
 	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
@@ -14,90 +14,121 @@
 	<div class="wrapper">
 		<div class="main-header">
 			<div class="logo-header">
-				<a href="index.html" class="logo">
+				<a href="{% url 'home' %}" class="logo">
 					Manage Your Tasks
 				</a>
-				<button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse" data-target="collapse" aria-controls="sidebar" aria-expanded="false" aria-label="Toggle navigation">
+				<button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse" data-target="#sidebar" aria-controls="sidebar" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<button class="topbar-toggler more"><i class="la la-ellipsis-v"></i></button>
 			</div>
+
+			<!-- Top Navigation Bar (from typography.html) -->
 			<nav class="navbar navbar-header navbar-expand-lg">
 				<div class="container-fluid">
-					</div>
-				</nav>
-			</div>
-			<div class="sidebar">
-				<div class="scrollbar-inner sidebar-wrapper">
-					<div class="user">
-						<div class="photo">
-							<img src="{% static 'img/troy.jpg' %}">
-						</div>
-						<div class="info">
-							<a class="" data-toggle="collapse" href="#collapseExample" aria-expanded="true">
-								<span>
-									Troy (steigmeister)
-									<span class="user-level">Administrator</span>
-								</span>
-							</a>
-							<div class="clearfix"></div>
+					
 
-						</div>
-					</div>
-					<ul class="nav">
-						<li class="nav-item">
-							<a href="{% url 'home' %}">
-								<i class="la la-dashboard"></i>
-								<p>Dashboard</p>
+					<!-- Right-aligned Icons & Dropdowns -->
+					<ul class="navbar-nav topbar-nav ml-md-auto align-items-center">
+
+						<!-- Messages -->
+						<li class="nav-item dropdown hidden-caret">
+							<a class="nav-link dropdown-toggle" href="#" id="emailDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								<i class="la la-envelope"></i>
 							</a>
+							<div class="dropdown-menu" aria-labelledby="emailDropdown">
+								<a class="dropdown-item" href="#">Inbox</a>
+								<a class="dropdown-item" href="#">Sent</a>
+								<div class="dropdown-divider"></div>
+								<a class="dropdown-item" href="#">Compose</a>
+							</div>
 						</li>
-						<li class="nav-item">
-							<a href="{% url 'category-list' %}">
-								<i class="la la-table"></i>
-								<p>Categories</p>
+						<!-- User Profile Dropdown -->
+						<li class="nav-item dropdown">
+							<a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false">
+								<img src="{% static 'img/troy.jpg' %}" alt="user-img" width="36" class="img-circle">
+								<span>{{ request.user.username}}</span>
 							</a>
-						</li>
-						<li class="nav-item">
-							<a href="{% url 'note-list' %}">
-								<i class="la la-keyboard-o"></i>
-								<p>Notes</p>
-							</a>
-						</li>
-						<li class="nav-item">
-							<a href="{% url 'priority-list' %}">
-								<i class="la la-th"></i>
-								<p>Priorities</p>
-							</a>
-						</li>
-						<li class="nav-item">
-							<a href="{% url 'subtask-list' %}">
-								<i class="la la-bell"></i>
-								<p>Sub Tasks</p>
-							</a>
-						</li>
-						<li class="nav-item">
-							<a href="{% url 'task-list' %}">
-								<i class="la la-font"></i>
-								<p>Tasks</p>
-							</a>
+							<ul class="dropdown-menu dropdown-user">
+								<li>
+									<div class="user-box">
+										<div class="u-img">
+											<img src="{% static 'img/troy.jpg' %}" alt="user">
+										</div>
+										<div class="u-text">
+											<h4>{{ request.user.username }}</h4>
+											<p class="text-muted">Administrator</p>
+											<a href="#" class="btn btn-rounded btn-danger btn-sm">View Profile</a>
+										</div>
+									</div>
+								</li>
+								<div class="dropdown-divider"></div>
+								<a class="dropdown-item" href="#"><i class="ti-user"></i> My Profile</a>
+								<a class="dropdown-item" href="#"><i class="ti-email"></i> Inbox</a>
+								<div class="dropdown-divider"></div>
+								<a class="dropdown-item" href="#"><i class="ti-settings"></i> Account Setting</a>
+								<div class="dropdown-divider"></div>
+								<a class="dropdown-item" href="#"><i class="fa fa-power-off"></i> Logout</a>
+							</ul>
 						</li>
 					</ul>
 				</div>
-			</div>
-			<div class="main-panel">
-				{% block content %}
-				{% endblock %}
-				<footer class="footer">
-					<div class="container-fluid">
-						<div class="copyright ml-auto">
-							2025, made by -> </i><a href="https://www.facebook.com/steigmeister.0308">steigmeister</a>
-						</div>				
+			</nav>
+		</div>
+
+		<!-- Sidebar -->
+		<div class="sidebar">
+			<div class="scrollbar-inner sidebar-wrapper">
+				<div class="user">
+					<div class="photo">
+						<img src="{% static 'img/troy.jpg' %}">
 					</div>
-				</footer>
+					<div class="info">
+						<a class="" data-toggle="collapse" href="#collapseExample" aria-expanded="true">
+							<span>
+								{{ request.user.username }}
+								<span class="user-level">Administrator</span>
+								<span class="caret"></span>
+							</span>
+						</a>
+						<div class="clearfix"></div>
+						<div class="collapse in" id="collapseExample" aria-expanded="true">
+							<ul class="nav">
+								<li><a href="#profile"><span class="link-collapse">My Profile</span></a></li>
+								<li><a href="#edit"><span class="link-collapse">Edit Profile</span></a></li>
+								<li><a href="#settings"><span class="link-collapse">Settings</span></a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<ul class="nav">
+					<li class="nav-item"><a href="{% url 'home' %}"><i class="la la-dashboard"></i><p>Dashboard</p></a></li>
+					<li class="nav-item"><a href="{% url 'category-list' %}"><i class="la la-table"></i><p>Categories</p></a></li>
+					<li class="nav-item"><a href="{% url 'note-list' %}"><i class="la la-keyboard-o"></i><p>Notes</p></a></li>
+					<li class="nav-item"><a href="{% url 'priority-list' %}"><i class="la la-th"></i><p>Priorities</p></a></li>
+					<li class="nav-item"><a href="{% url 'subtask-list' %}"><i class="la la-bell"></i><p>Sub Tasks</p></a></li>
+					<li class="nav-item"><a href="{% url 'task-list' %}"><i class="la la-font"></i><p>Tasks</p></a></li>
+				</ul>
 			</div>
 		</div>
+
+		<!-- Main Content -->
+		<div class="main-panel">
+			{% block content %}
+			{% endblock %}
+
+			<!-- Footer -->
+			<footer class="footer">
+				<div class="container-fluid">
+					<div class="copyright ml-auto">
+						2025, made by → <a href="https://www.facebook.com/steigmeister.0308">steigmeister</a>
+					</div>
+				</div>
+			</footer>
+		</div>
 	</div>
-	<!-- Modal -->
+
+	<!-- Modal: Under Development -->
 	<div class="modal fade" id="modalUpdate" tabindex="-1" role="dialog" aria-labelledby="modalUpdatePro" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered" role="document">
 			<div class="modal-content">
@@ -107,10 +138,9 @@
 						<span aria-hidden="true">&times;</span>
 					</button>
 				</div>
-				<div class="modal-body text-center">									
+				<div class="modal-body text-center">
 					<p>Currently the pro version of the <b>Ready Dashboard</b> Bootstrap is in progress development</p>
-					<p>
-					<b>We'll let you know when it's done</b></p>
+					<p><b>We'll let you know when it's done</b></p>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -118,18 +148,20 @@
 			</div>
 		</div>
 	</div>
+
+	<!-- Scripts -->
+	<script src="{% static 'js/core/jquery.3.2.1.min.js' %}"></script>
+	<script src="{% static 'js/plugin/jquery-ui-1.12.1.custom/jquery-ui.min.js' %}"></script>
+	<script src="{% static 'js/core/popper.min.js' %}"></script>
+	<script src="{% static 'js/core/bootstrap.min.js' %}"></script>
+	<script src="{% static 'js/plugin/chartist/chartist.min.js' %}"></script>
+	<script src="{% static 'js/plugin/chartist/plugin/chartist-plugin-tooltip.min.js' %}"></script>
+	<script src="{% static 'js/plugin/bootstrap-notify/bootstrap-notify.min.js' %}"></script>
+	<script src="{% static 'js/plugin/bootstrap-toggle/bootstrap-toggle.min.js' %}"></script>
+	<script src="{% static 'js/plugin/jquery-mapael/jquery.mapael.min.js' %}"></script>
+	<script src="{% static 'js/plugin/jquery-mapael/maps/world_countries.min.js' %}"></script>
+	<script src="{% static 'js/plugin/chart-circle/circles.min.js' %}"></script>
+	<script src="{% static 'js/plugin/jquery-scrollbar/jquery.scrollbar.min.js' %}"></script>
+	<script src="{% static 'js/ready.min.js' %}"></script>
 </body>
-<script src="{% static 'js/core/jquery.3.2.1.min.js' %}"></script>
-<script src="{% static 'js/plugin/jquery-ui-1.12.1.custom/jquery-ui.min.js' %}"></script>
-<script src="{% static 'js/core/popper.min.js' %}"></script>
-<script src="{% static 'js/core/bootstrap.min.js' %}"></script>
-<script src="{% static 'js/plugin/chartist/chartist.min.js' %}"></script>
-<script src="{% static 'js/plugin/chartist/plugin/chartist-plugin-tooltip.min.js' %}"></script>
-<script src="{% static 'js/plugin/bootstrap-notify/bootstrap-notify.min.js' %}"></script>
-<script src="{% static 'js/plugin/bootstrap-toggle/bootstrap-toggle.min.js' %}"></script>
-<script src="{% static 'js/plugin/jquery-mapael/jquery.mapael.min.js' %}"></script>
-<script src="{% static 'js/plugin/jquery-mapael/maps/world_countries.min.js' %}"></script>
-<script src="{% static 'js/plugin/chart-circle/circles.min.js' %}"></script>
-<script src="{% static 'js/plugin/jquery-scrollbar/jquery.scrollbar.min.js' %}"></script>
-<script src="{% static 'js/ready.min.js' %}"></script>
 </html>
