--- a/templates/base.html
+++ b/templates/base.html
@@ -70,7 +70,7 @@
 								<div class="dropdown-divider"></div>
 								<a class="dropdown-item" href="#"><i class="ti-settings"></i> Account Setting</a>
 								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="#"><i class="fa fa-power-off"></i> Logout</a>
+								<a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
 							</ul>
 						</li>
 					</ul>
